# imagecropper

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  pyproject.toml
doc/: README.md
docs/: DECISIONS.md  SPEC.md
src/imagecropper/: __init__.py  __main__.py  anon.py  cli.py  console.py  crop.py  enhance.py  models.py
tests/: test_anon.py  test_cli.py  test_console.py  test_crop.py  test_models.py
