[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imagecropper"
version = "0.2.2"
description = "Small CLI for image cropping and related utilities"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "codeprimate" }]
maintainers = [{ name = "codeprimate" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Graphics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click>=8.1.0",
    "gfpgan>=1.3.8",
    "numpy>=1.24.0",
    "opencv-python-headless>=4.8.0",
    "pillow>=10.0.0",
    "requests>=2.31.0",
    "torch>=2.1.0",
    "ultralytics>=8.3.0",
]

[project.urls]
Homepage = "https://github.com/codeprimate/imagecropper"
Repository = "https://github.com/codeprimate/imagecropper"
Issues = "https://github.com/codeprimate/imagecropper/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "types-Pillow>=10.0.0",
    "types-requests>=2.31.0",
    "pre-commit>=3.5.0",
    "build>=1.2.0",
    "twine>=6.0.0",
]

[project.scripts]
imagecropper = "imagecropper.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=src/imagecropper",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
]
markers = [
    "unit: Unit tests",
]

[tool.coverage.run]
source = ["src/imagecropper"]
omit = ["tests/*", "src/imagecropper/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [".venv", "__pycache__", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "PTH",
    "SIM",
    "TID",
]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["click.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["cv2.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["numpy.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["torch.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["gfpgan.*", "facexlib.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["torchvision.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["ultralytics", "ultralytics.*"]
ignore_missing_imports = true
